Serve /devstate/image
