# ododevapispec.yaml
@@ -264,7 +264,7 @@ paths:
                   type: string
       responses:
         '200':
-          description: container was successfully added to the container
+          description: container was successfully added to the devfile
           content:
             application/json:
               schema:
@@ -338,6 +338,108 @@ paths:
                 $ref: '#/components/schemas/GeneralError'
               example:
                 message: "Error deleting the container"
+
+  /devstate/image:
+    post:
+      description: Add a new image to the Devfile
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  description: Name of the image
+                  type: string
+                imageName:
+                  type: string
+                args:
+                  type: array
+                  items: {
+                    type: string
+                  }
+                buildContext:
+                  type: string
+                rootRequired:
+                  type: bool
+                uri:
+                  type: string
+      responses:
+        '200':
+          description: image was successfully added to the devfile
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  component:
+                    type: object
+                    description: Content of the Devfile
+              example:
+                {
+                    "Content": "schemaVersion: 2.2.0\n",
+                    "Commands": [],
+                    "Containers": [],
+                    "Images": [],
+                    "Resources": [],
+                    "Events": {
+                        "PreStart": null,
+                        "PostStart": null,
+                        "PreStop": null,
+                        "PostStop": null
+                    },
+                    "Metadata": {
+                        "Name": "",
+                        "Version": "",
+                        "DisplayName": "",
+                        "Description": "",
+                        "Tags": "",
+                        "Architectures": "",
+                        "Icon": "",
+                        "GlobalMemoryLimit": "",
+                        "ProjectType": "",
+                        "Language": "",
+                        "Website": "",
+                        "Provider": "",
+                        "SupportUrl": ""
+                    }
+                }
+        '500':
+          description: Error adding the image
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GeneralError'
+              example:
+                message: "Error adding the image"
+
+  /devstate/image/{imageName}:
+    delete:
+      description: "Delete an image from the Devfile"
+      parameters:
+        - name: imageName
+          in: path
+          description: Image name to delete
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GeneralSuccess'
+              example:
+                message: "Image has been deleted"
+          description: "Image has been deleted"
+        '500':
+          description: Error deleting the image
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GeneralError'
+              example:
+                message: "Error deleting the image"
 
 components:
   schemas:
