# pkg/apiserver-gen/go/model__devstate_image_post_request.go
@@ -1,0 +1,43 @@
+/*
+ * odo dev
+ *
+ * API interface for 'odo dev'
+ *
+ * API version: 0.1
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type DevstateImagePostRequest struct {
+
+	// Name of the image
+	Name string `json:"name,omitempty"`
+
+	ImageName string `json:"imageName,omitempty"`
+
+	Args []string `json:"args,omitempty"`
+
+	BuildContext string `json:"buildContext,omitempty"`
+
+	RootRequired bool `json:"rootRequired,omitempty"`
+
+	Uri string `json:"uri,omitempty"`
+}
+
+// AssertDevstateImagePostRequestRequired checks if the required fields are not zero-ed
+func AssertDevstateImagePostRequestRequired(obj DevstateImagePostRequest) error {
+	return nil
+}
+
+// AssertRecurseDevstateImagePostRequestRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of DevstateImagePostRequest (e.g. [][]DevstateImagePostRequest), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseDevstateImagePostRequestRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aDevstateImagePostRequest, ok := obj.(DevstateImagePostRequest)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertDevstateImagePostRequestRequired(aDevstateImagePostRequest)
+	})
+}
